<resources>
    <string name="app_name">Healthcheck_WebUsed</string>
    <string name="finish_test_tv">7. Нажмите \"Ввод"\ и тест завершён!</string>
    <string name="overwork">Переутомление</string>
    <string name="f_relax">Для прохождения теста необходимо иметь возможность лечь на 5 минут. Время проведения теста около 10-15 мин.</string>
    <string name="str_test">Тест</string>
    <string name="day_birth">Дата вашего рождения:</string>
    <string name="gender">Пол:</string>
    <string name="first_point">1. Ложитесь на кровать и 5 минут лежите на ней без движений.</string>
    <string name="second_point">2. Посчитайте пульс в течение минуты.</string>
    <string name="third_point">3. Введите пульс в положении лёжа:</string>
    <string name="fourth_point">4. Встаньте и стойте почти без движений около 5 минут.</string>
    <string name="five_point">5. Посчитайте пульс в течение минуты.</string>
    <string name="six_point">6. Введите пульс в положении стоя:</string>
    <string name="input_text">Ввод</string>
    <string name="image_descr">This is an image</string>

    <string name="restart_menu">Начать тест заново</string>
    <string name="exit_menu">Выйти</string>

    <string name="test_results">Результаты теста</string>
</resources>